fix(style) : Scrollbar + Page mob size

--- a/src/app/components/mob/Mob.css
+++ b/src/app/components/mob/Mob.css
@@ -3,7 +3,9 @@
 }
 
 .dropMobContainer {
-    width: 60%;
+    width: 70%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .cardDropContainer {
