--- a/src/app/resources/[slug]/resourceDetails.css
+++ b/src/app/resources/[slug]/resourceDetails.css
@@ -6,7 +6,7 @@
 }
 
 .headerDetails {
-    width: 60%;
+    width: 70%;
     background-color: var(--main-bg-color);
     padding-bottom: 20px;
     border-radius: 20px;
